[project]
name = "todo"
version = "0.1.0"
description = ""
authors = [
    {name = "'holyhloy'",email = "tlegchilin@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.1.6,<6.0.0)",
    "django-allauth (>=65.4.1,<66.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "markdown (>=3.7,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
